welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: type mismatch;
 found   : String
 required: Int
      var A:Int=litMessage()
                          ^Array2:21: error: not found: value T
      setCouleurBrosse(T(i+A)% X)
                       ^Array2:21: error: not found: value X
      setCouleurBrosse(T(i+A)% X)
                               ^